# taperipper

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.OFL  README.md  rust-toolchain.toml
.cargo/: config.toml
iosevka-embedded/: Cargo.toml  README.md  build.rs
iosevka-embedded/fonts/: IosevkaFixed-Extended-8.bdf  IosevkaFixed-ExtendedBold-8.bdf  IosevkaFixed-ExtendedItalic-8.bdf  IosevkaFixed-ExtendedLight-8.bdf  IosevkaFixed-ExtendedThin-8.bdf
iosevka-embedded/src/: lib.rs
scripts/: build-ovmf.sh  make-dbg.sh  mkfonts.py  run-qemu.sh
taperipper/: Cargo.toml
taperipper/.cargo/: config.toml
taperipper/src/: main.rs  uefi_sys.rs
taperipper/src/debug/: info.rs  mod.rs  trace.rs
taperipper/src/display/: color.rs  fmt.rs  font.rs  formatting.rs  framebuffer.rs  mod.rs  style.rs
taperipper/src/log/: gop_cons.rs  mod.rs  qemu.rs  tracer.rs  txt_cons.rs  writer.rs
taperipper/src/log/layer/: fmt.rs  mod.rs
taperipper/src/platform/: acpi.rs  local.rs  mod.rs  msr.rs  smp.rs  uefi.rs
taperipper/src/platform/uefi/: image.rs  mod.rs  output.rs  system.rs  tables.rs  time.rs  variables.rs
taperipper/src/runtime/: executor.rs  mod.rs  panic.rs  smp.rs  time.rs
tinypng/: Cargo.toml  README.md
tinypng/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs  paths.rs  utils.rs
xtask/src/commands/: mod.rs  ovmf.rs  qemu.rs  taperipper.rs
