[package]
name        = "iosevka-embedded"
version     = "33.2.3"
edition     = "2024"
description = "Iosevka Fixed font for embedded-graphics"

[dependencies]
embedded-graphics = "0.8.1"
eg-bdf            = { git = "https://github.com/embedded-graphics/bdf", branch = "master" }

[build-dependencies]
eg-font-converter = { git = "https://github.com/embedded-graphics/bdf", branch = "master" }

[features]

default = []

# Font Styles
italic  = []

# Font Weights
thin  = []
light = []
bold  = []

# Font Sizes
size_8  = []
size_16 = []
size_24 = []
size_32 = []
