[package]
name          = "taperipper"
version       = "0.1.0"
edition       = "2024"
license       = "BSD-3-Clause"

[dependencies]
# UEFI and HW Support
acpi     = "5.2.0"
uefi     = { version = "0.34.1", features = ["alloc"] }
uefi-raw = "0.10.0"

# Async runtime bits
# TODO(aki): Do we want to roll our own, eventually?
cordyceps    = { git = "https://github.com/hawkw/mycelium", rev = "435f310", package = "cordyceps", default-features = false, features = ["alloc"] }
maitake-sync = { git = "https://github.com/hawkw/mycelium", rev = "435f310", package = "maitake-sync", default-features = false, features = ["alloc"] }
maitake      = { git = "https://github.com/hawkw/mycelium", rev = "435f310", package = "maitake"     , default-features = false, features = ["alloc"] }

# Logging
tracing            = { version = "0.1.41", default-features = false }
tracing-core       = { version = "0.1.33", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["alloc", "std", "registry"]}
log                = { version = "0.4.27", default-features = false }

# Embedded-Graphics for fancy
embedded-graphics = "0.8.1"
eg-bdf            = { git = "https://github.com/embedded-graphics/bdf", branch = "master" }
iosevka-embedded  = { path = "../iosevka-embedded" }
tinypng           = { path = "../tinypng" }

# Debugging/Stack Unwinding
yaxpeax-x86     = { version = "2.0.0", default-features = false, optional = true }
goblin          = { version = "0.9", default-features =  false, features = ["pe64"], optional = true }
rustc-demangle  = { version = "0.1", optional = true }

[features]
default         = ["stack-unwinding"]
stack-unwinding = ["dep:goblin", "dep:rustc-demangle", "dep:yaxpeax-x86"]

[[bin]]
name  = "taperipper"
test  = false
bench = false
